# esp-idf_mlx90614

./: CMakeLists.txt  README.md  idf_component.yml  mlx90614.c  mlx90614.h
.github/workflows/: build.yml  upload_component.yml
examples/get-started/: README.md
examples/get-started/main/: Kconfig.projbuild  idf_component.yml  main.c
examples/get_start/: CMakeLists.txt
examples/get_start/main/: idf_component.yml  main.c
include/: mlx90614.h
src/: mlx90614.c
